@@ -1,3 +1,5 @@
+local datetime = require "datetime"
+local os = require "os"
 local smtp = require "smtp"
 local bin = require "bin"
 local shortport = require "shortport"
@@ -125,6 +127,7 @@ action = function(host, port)
   if not response then
     return
   end
+  local recvtime = os.time()
 
   socket:close()
 
@@ -142,6 +145,13 @@ action = function(host, port)
   end
 
   local ntlm_decoded = smbauth.get_host_info_from_security_blob(response_decoded)
+
+  if ntlm_decoded.timestamp and ntlm_decoded.timestamp > 0 then
+    stdnse.debug1("timestamp is %s", ntlm_decoded.timestamp)
+    -- 64-bit number of 100ns clicks since 1/1/1601
+    local unixstamp = ntlm_decoded.timestamp // 10000000 - 11644473600
+    datetime.record_skew(host, unixstamp, recvtime)
+  end
 
   -- Target Name will always be returned under any implementation
   output.Target_Name = ntlm_decoded.target_realm
