@@ -7,6 +7,7 @@ local os = require "os"
 local string = require "string"
 local sslcert = require "sslcert"
 local tls = require "tls"
+local datetime = require "datetime"
 
 description = [[
 Retrieves a target host's time and date from its TLS ServerHello response.
@@ -201,6 +202,7 @@ action = function(host, port)
     end
   end
 
+  datetime.record_skew(host, tm.target, tm.scanner)
   local output = {
                  date = stdnse.format_timestamp(tm.target, 0),
                  delta = tm.delta,
