@@ -1,3 +1,5 @@
+local datetime = require "datetime"
+local os = require "os"
 local bin = require "bin"
 local comm = require "comm"
 local shortport = require "shortport"
@@ -87,6 +89,7 @@ action = function(host, port)
     return nil
   end
 
+  local recvtime = os.time()
   socket:close()
 
   -- Continue only if NTLMSSP response is returned.
@@ -99,6 +102,12 @@ action = function(host, port)
 
   -- Leverage smbauth.get_host_info_from_security_blob() for decoding
   local ntlm_decoded = smbauth.get_host_info_from_security_blob(data)
+
+  if ntlm_decoded.timestamp then
+    -- 64-bit number of 100ns clicks since 1/1/1601
+    local unixstamp = ntlm_decoded.timestamp // 10000000 - 11644473600
+    datetime.record_skew(host, unixstamp, recvtime)
+  end
 
   -- Target Name will always be returned under any implementation
   output.Target_Name = ntlm_decoded.target_realm
